<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginVertical="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_guideline" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginVertical="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <CheckBox
        android:id="@+id/admin_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_marginVertical="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/admin_check_box"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginVertical="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
        app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_error" />

</androidx.constraintlayout.widget.ConstraintLayout>